# linkify-gh-markdown

./: .all-contributorsrc  .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml
src/linkify_gh_markdown/: __main__.py  cli.py  main.py
tests/: test_cli.py  test_dunder_main.py  test_main.py
